[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Door/keyGreen.png" type="Texture" id=1]
[ext_resource path="res://Assets/sounds/confirmation_002.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/ExitKey.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27, 17 )

[node name="ExitKey" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 1 )

[node name="SoundKey" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
bus = "Effects"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_ExitKey_body_entered"]
[connection signal="finished" from="SoundKey" to="." method="_on_SoundKey_finished"]
